istio/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service-a-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "service-a.dash0-examples.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-a
  namespace: demo
spec:
  hosts:
  - "service-a.dash0-examples.com"
  gateways:
  - service-a-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: service-a.demo.svc.cluster.local
        port:
          number: 3000
